# conveyor-samples

./: .gitignore  .gitpod.yml  CONTRIBUTING.md  README.md  requirements.txt
.datafy/: project.yaml
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/: PULL_REQUEST_TEMPLATE.md  pr-pipeline.yml
.github/workflow/: build.yaml  build.yml
.github/workflows/: build.yml  pr-pipeline.yml
basic/coffee_shop_dbt/: .dockerignore  Dockerfile  Makefile  README.md  ide.yaml  (+5 more)
basic/dlthub_oracle_to_snowflake/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
basic/dlthub_oracle_to_snowflake/.conveyor/: project.yaml
basic/dlthub_oracle_to_snowflake/.dlt/: config.toml  secrets.toml.template
basic/dlthub_oracle_to_snowflake/dags/: extract_load.py
basic/dlthub_oracle_to_snowflake/docs/: oracle_all_types.sql  snowflake.sql  snowflake_setup.md
basic/dlthub_oracle_to_snowflake/infra/: aws_s3.tfbackend  network.tf  outputs.tf  provider.tf  variables.tf  versions.tf
basic/dlthub_oracle_to_snowflake/infra/modules/snowflake_loader/: role.tf  variables.tf
basic/dlthub_oracle_to_snowflake/infra/modules/snowflake_reader/: role.tf  variables.tf
basic/dlthub_oracle_to_snowflake/src/dlt_example/: .dlt  app.py
basic/dlthub_oracle_to_snowflake/src/dlt_example/validation/: oracle.py
basic/dlthub_oracle_to_snowflake/tests/validation/: test_oracle.py
basic/oracle_to_s3tables_dlthub/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  full_load.py  incremental_load.py  main.py  pyproject.toml  sql_database_pipeline.py
basic/oracle_to_s3tables_dlthub/.conveyor/: project.yml
basic/oracle_to_s3tables_dlthub/.dlt/: .sources  config.toml  secrets.toml.template
basic/oracle_to_s3tables_dlthub/dags/: extract_load.py
basic/oracle_to_s3tables_dlthub/docs/: snowflake.sql  snowflake_setup.md
basic/oracle_to_s3tables_dlthub/infra/: .terraform.lock.hcl  main.tf  network.tf  outputs.tf  provider.tf  sf_permissions.tf  variables.tf  versions.tf
basic/oracle_to_s3tables_dlthub/src/dlt_example/: app.py
basic/sqlmesh_example/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.yaml  config.yaml.template  pyproject.toml
basic/sqlmesh_example/audits/: all_positive_values.sql  assert_positive_order_ids.sql
basic/sqlmesh_example/dags/: transformation.py
basic/sqlmesh_example/docs/: README.md  snowflake.sql
basic/sqlmesh_example/infra/: .gitignore  .terraform.lock.hcl  backend.tf.template  compute.tf  provider.tf  sample.tfvars  snowflake_permissions.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf  versions.tf
basic/sqlmesh_example/infra/.terraform/: terraform.tfstate
basic/sqlmesh_example/models/: full_model.sql  incremental_model.sql  lineitem_summary_enriched_model.sql  lineitem_summary_incremental_model.sql  lineitem_summary_model.sql  seed_model.sql
basic/sqlmesh_example/tests/: test_full_model.yaml  test_lineitem_summary_enriched.yaml
dags/: titanic.py
notebooks/: 0_validation.ipynb  debug.ipynb  exploration.ipynb  model.ipynb
openaq-dbt/: .dockerignore  Dockerfile  README.md  dev-requirements.in  dev-requirements.txt  local_run.sh  requirements.in  requirements.txt  setup.py
openaq-pyspark/: .gitignore  Dockerfile  README.md  dev-requirements.in  dev-requirements.txt  notebooks.yaml  requirements.txt  setup.py
pidemo/: README.md  setup.py
prerequisites/: README.md  install.sh
pyspark_streaming/: Dockerfile  README.md  dev-requirements.txt  setup.py  streaming.yaml
(+185 files in other folders)
