[project]
name = "oracle-to-s3tables-dlthub"
version = "0.1.0"
description = "Sample project illustrating how one can extract data from Oracle into AWS S3 Tables"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dlt[duckdb,filesystem,snowflake,sql-database]>=1.9.0",
    "faker>=37.1.0",
    "oracledb>=3.1.0",
    "streamlit>=1.44.1",
]

[dependency-groups]
conveyor-airflow = [
    "pendulum>=3.0.0",
]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]
