[project]
name = "oracle-to-s3tables-dlthub"
version = "0.1.0"
description = "Sample project illustrating how one can extract data from Oracle into AWS S3 Tables"
readme = "README.md"
authors = ["oliver.willekens@dataminded.com", "siyan.luo@dataminded.com"]
requires-python = ">=3.12,<3.13"  # snowflake-connector not supported on 3.13 yet
dependencies = [
    "dlt[duckdb,filesystem,snowflake,sql-database,sqlalchemy]>=1.9.0",
    "faker>=37.1.0",
    "oracledb>=3.1.0",
    "pyarrow[pandas]<19",
    "snowflake-sqlalchemy>=1.7.3", # limitation imposed by snowflake connector, 2025-04-11
    "streamlit>=1.44.1",
]

[dependency-groups]
conveyor-airflow = []
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]
